--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
     <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Italianno|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" />
 
     <!-- Additional CSS must be placed after Bootstrap CSS -->
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
@@ -225,8 +225,8 @@
             </div>
         </div>
 
-        <div class="row row-content">
-            <div class="col-sm-9">
+        <div class="row row-content-2">
+            <div class="col-sm-12">
                 <h2>Facts &amp; Figures</h2>
                 <div class="table-responsive">
                     <table class="table table-striped">
